[package]
edition = "2024"
name = "igb"
version = "0.1.0"

[dependencies]
mbarrier = "0.1"
dma-api = { version = "0.3", features = ["alloc"] }
log = "0.4"
tock-registers = "0.10.0"
trait-ffi = "0.1.2"

[dev-dependencies]
bare-test = "0.4"
pcie = "0.3"
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-icmp",
] }


[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
