[package]
edition = "2024"
name = "usb-serial"
version = "0.1.0"

[dependencies]
mbarrier = "0.1"
dma-api = { version = "0.4.3", features = ["alloc"] }
log = "0.4"
futures = { version = "0.3", features = ["alloc"], default-features = false }
crab-usb = "0.3.3"
usb-if = "0.3.1"

[dev-dependencies]
bare-test = "0.5"
spin_on = "0.1.1"
pcie = "0.3"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
